# CPU-Emulator

./: .gitignore  CMakeLists.txt  README.md  factorial.xan  factorial_recurs.xan  fib.xan  fibonacci.xan  main.cpp
CPU_emulator/include/: cpu.hpp
CPU_emulator/operations/include/: operations.hpp
StackLib/: CMakeLists.txt  sandbox.cpp
StackLib/include/: stack.hpp
StackLib/tests/: stack_tests.cpp
include/: binSerializer.hpp  cpu.hpp  exceptBuilder.hpp  exceptions.hpp  parser.hpp  preprocessor.hpp  settings.hpp  state.hpp  token.hpp
operations/include/: BaseOperation.hpp  add.hpp  baseOperation.hpp  begin.hpp  call.hpp  div.hpp  end.hpp  in.hpp  jump.hpp  jumpEq.hpp  jumpGreat.hpp  jumpGreatEq.hpp  jumpLess.hpp  jumpLessEq.hpp  jumpNe.hpp  mul.hpp  operationBuilder.hpp  operations.hpp  out.hpp  popRegister.hpp  popStack.hpp  pushRegister.hpp  pushStack.hpp  ret.hpp  sub.hpp
operations/src/: BaseOperation.cpp  add.cpp  baseOperation.cpp  begin.cpp  call.cpp  div.cpp  end.cpp  in.cpp  jump.cpp  jumpEq.cpp  jumpGreat.cpp  jumpGreatEq.cpp  jumpLess.cpp  jumpLessEq.cpp  jumpNe.cpp  mul.cpp  out.cpp  popRegister.cpp  popStack.cpp  pushRegister.cpp  pushStack.cpp  ret.cpp  sub.cpp
src/: binSerializer.cpp  cpu.cpp  exceptions.cpp  parser.cpp  preprocessor.cpp
